<resources>
    <string name="app_name">kleos</string>
<<<<<<< HEAD
<<<<<<< HEAD

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
=======
=======

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

>>>>>>> e4301a092cde0713e9388c22188b231657edf1a8
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN-UP</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
<<<<<<< HEAD
>>>>>>> 6318cf2c16feb0cb7169b568cf39f8241ffb3594
=======
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="already_have_a_account">Already have an account ? Login!</string>
    <string name="otp_text">Please enter the OTP that we have send you.</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="submit">Submit</string>
    <string name="college">College</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="proceed">Proceed</string>
    <string name="new_password">New Password</string>
    <string name="hint_name">Name</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="solved_questions">Solved Questions</string>

>>>>>>> e4301a092cde0713e9388c22188b231657edf1a8
</resources>
